fix ui overflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
 .container {
-  display: flex;
-  flex-direction: column;
   position: fixed;
+  display: grid;
+  grid-template-rows: auto auto 1fr auto;
   top: 0;
   bottom: 0;
   right: 0;
@@ -28,6 +28,8 @@ header {
   flex-direction: column;
   flex: 1;
   height: 100%;
+  min-height: 0px;
+
   @media only screen and (min-width: 600px) {
     flex-direction: row;
   }
